--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 </head>
 <body>
     <ul>
-        
+        <li>Alma</li>
+        <li>Körte</li>
+        <li>Cseresznye</li>
+        <li>Meggy</li>
+        <li>Szilva</li>
+        <li>Tészta</li>
+        <li>Csirkemell filé</li>
+        <li>Marhahús</li>
+        <li>Zsemle Morzsa</li>
+        <li>Selyem takaró</li>
+        <li>McDonals részvények</li>
+        <li>Boldogság</li>
+        <li>élet</li>
+        <li>Hit</li>
+        <li>Isten</li>
     </ul>
 </body>
 </html>
