--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <ul>
-        
+        <li>kakaópor</li>
+        <li>vaj</li>
+        <li>kenyér</li>
+        <li>liszt</li>
+        <li>tej</li>
+        <li>sonka</li>
+        <li>sajt</li>
+        <li>könyv</li>
+        <li>ikeas szekrény</li>
+        <li>monitor</li>
+        <li>párna</li>
+        <li>strepsils</li>
+        <li>lista</li>
     </ul>
 </body>
 </html>
