--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <li>McDonals részvények</li>
         <li>Hit</li>
         <li>Isten</li>
-
+        <li>szer</li>
+        <li>et</li>
+        <li>le</li>
+        <li>k</li>
 </body>
 </html>
