--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li>McDonals részvények</li>
         <li>Hit</li>
         <li>Isten</li>
-
+        <li>Hit</li>
+        <li>Isten</li>
 </body>
 </html>
